Update Scroll Snap Feature

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
     <h1 class="fluid">I am, <br/> Diya Joshi.</h1>
   </header>
-  <main>
+  <main class="snap-container">
     <section class="content fluid">
       <h2><span aria-hidden="true">I am a &nbsp;</span>
         <span class="sr-only">you can ship things.</span>
