--- a/index.html
+++ b/index.html
@@ -12,34 +12,36 @@
   </header>
   <main class="snap-container">
     <section class="content fluid">
-      <h2><span aria-hidden="true">I am a &nbsp;</span>
-        <span class="sr-only">you can ship things.</span>
-      </h2>
-      <ul aria-hidden="true" style="--count: 22">
-        <li style="--i: 0">coder.</li>
-        <li style="--i: 1">developer.</li>
-        <li style="--i: 2">musician.</li>
-        <li style="--i: 3">artist.</li>
-        <li style="--i: 4">thinker.</li>
-        <li style="--i: 5">solver.</li>
-        <li style="--i: 6">learner.</li>
-        <li style="--i: 7">cook.</li>
-        <li style="--i: 8">reader.</li>
-        <li style="--i: 9">writer.</li>
-        <li style="--i: 10">collaborater.</li>
-        <li style="--i: 11">creator.</li>
-        <li style="--i: 12">inspirer.</li>
-        <li style="--i: 13">leader.</li>
-        <li style="--i: 14">innovator.</li>
-        <li style="--i: 15">inquirer.</li>
-        <li style="--i: 16">philosopher.</li>
-        <li style="--i: 17">teacher.</li>
-        <li style="--i: 18">visualizer.</li>
-        <li style="--i: 19">edm enthusiast.</li>
-        <li style="--i: 20">gamer.</li>
-      </ul>
-    </section>
-    <section>
+        <h2>
+          <span aria-hidden="true" class="static">I am a&nbsp;</span>
+          <span aria-hidden="true" class="word-scroll">
+            <ul class="scroll-list fluid" aria-hidden="true" style="--count: 20">
+                <li style="--i: 0">coder.</li>
+                <li style="--i: 1">developer.</li>
+                <li style="--i: 2">musician.</li>
+                <li style="--i: 3">artist.</li>
+                <li style="--i: 4">thinker.</li>
+                <li style="--i: 5">solver.</li>
+                <li style="--i: 6">learner.</li>
+                <li style="--i: 7">cook.</li>
+                <li style="--i: 8">reader.</li>
+                <li style="--i: 9">writer.</li>
+                <li style="--i: 10">collaborater.</li>
+                <li style="--i: 11">creator.</li>
+                <li style="--i: 12">inspirer.</li>
+                <li style="--i: 13">leader.</li>
+                <li style="--i: 14">innovator.</li>
+                <li style="--i: 15">inquirer.</li>
+                <li style="--i: 16">philosopher.</li>
+                <li style="--i: 17">teacher.</li>
+                <li style="--i: 18">visualizer.</li>
+                <li style="--i: 19">edm enthusiast.</li>
+                <li style="--i: 20">gamer.</li>
+            </ul>
+          </span>
+          <span class="sr-only">you can ship things.</span>
+        </h2>
+</section>
       <h2 class="fluid">fin.</h2>
     </section>
   </main>
