--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>
           <span aria-hidden="true" class="static">I am a&nbsp;</span>
           <span aria-hidden="true" class="word-scroll">
-            <ul class="scroll-list fluid" aria-hidden="true" style="--count: 20">
+            <ul class="scroll-list" aria-hidden="true" style="--count: 20">
                 <li style="--i: 0">coder.</li>
                 <li style="--i: 1">developer.</li>
                 <li style="--i: 2">musician.</li>
