--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="style.css">
-     <script src="script.js"></script>
+     <script src="JavaScript/gsap.min.js"></script>
+     <script src="JavaScript/script.js"></script>
      <title>It's Me. Diya Joshi.</title>
  </head>
  <header>
      <h1 class="fluid">I am, <br/> Diya Joshi.</h1>
-   </header>
+ </header>
    <main>
      <section class="content fluid">
        <h2><span aria-hidden="true">I am a &nbsp;</span>
