Update Scrolling Animation

--- a/index.html
+++ b/index.html
@@ -1,105 +1,106 @@
 <!DOCTYPE html>
- <html lang="en">
- <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="style.css">
-     <script src="JavaScript/gsap.min.js"></script>
-     <script src="JavaScript/script.js"></script>
-     <title>It's Me. Diya Joshi.</title>
- </head>
- <header>
-     <h1 class="fluid">I am, <br/> Diya Joshi.</h1>
- </header>
-   <main>
-     <section class="content fluid">
-       <h2><span aria-hidden="true">I am a &nbsp;</span>
-         <span class="sr-only">you can ship things.</span>
-       </h2>
-       <ul aria-hidden="true" style="--count: 22">
-         <li style="--i: 0">coder.</li>
-         <li style="--i: 1">developer.</li>
-         <li style="--i: 2">musician.</li>
-         <li style="--i: 3">artist.</li>
-         <li style="--i: 4">thinker.</li>
-         <li style="--i: 5">solver.</li>
-         <li style="--i: 6">learner.</li>
-         <li style="--i: 7">cook.</li>
-         <li style="--i: 8">reader.</li>
-         <li style="--i: 9">writer.</li>
-         <li style="--i: 10">collaborater.</li>
-         <li style="--i: 11">creator.</li>
-         <li style="--i: 12">inspirer.</li>
-         <li style="--i: 13">leader.</li>
-         <li style="--i: 14">innovator.</li>
-         <li style="--i: 15">inquirer.</li>
-         <li style="--i: 16">philosopher.</li>
-         <li style="--i: 17">teacher.</li>
-         <li style="--i: 18">visualizer.</li>
-         <li style="--i: 19">edm enthusiast.</li>
-         <li style="--i: 20">gamer.</li>
-       </ul>
-     </section>
-     <section>
-       <h2 class="fluid">fin.</h2>
-     </section>
-   </main>
-   <footer>ʕ⊙ᴥ⊙ʔ jh3yy &copy; 2024</footer>
-   <a
-     class="bear-link"
-     href="https://twitter.com/intent/follow?screen_name=jh3yy"
-     target="_blank"
-     rel="noreferrer noopener"
-   >
-     <svg
-       class="w-9"
-       viewBox="0 0 969 955"
-       fill="none"
-       xmlns="http://www.w3.org/2000/svg"
-     >
-       <circle
-         cx="161.191"
-         cy="320.191"
-         r="133.191"
-         stroke="currentColor"
-         stroke-width="20"
-       ></circle>
-       <circle
-         cx="806.809"
-         cy="320.191"
-         r="133.191"
-         stroke="currentColor"
-         stroke-width="20"
-       ></circle>
-       <circle
-         cx="695.019"
-         cy="587.733"
-         r="31.4016"
-         fill="currentColor"
-       ></circle>
-       <circle
-         cx="272.981"
-         cy="587.733"
-         r="31.4016"
-         fill="currentColor"
-       ></circle>
-       <path
-         d="M564.388 712.083C564.388 743.994 526.035 779.911 483.372 779.911C440.709 779.911 402.356 743.994 402.356 712.083C402.356 680.173 440.709 664.353 483.372 664.353C526.035 664.353 564.388 680.173 564.388 712.083Z"
-         fill="currentColor"
-       ></path>
-       <rect
-         x="310.42"
-         y="448.31"
-         width="343.468"
-         height="51.4986"
-         fill="#FF1E1E"
-       ></rect>
-       <path
-         fill-rule="evenodd"
-         clip-rule="evenodd"
-         d="M745.643 288.24C815.368 344.185 854.539 432.623 854.539 511.741H614.938V454.652C614.938 433.113 597.477 415.652 575.938 415.652H388.37C366.831 415.652 349.37 433.113 349.37 454.652V511.741L110.949 511.741C110.949 432.623 150.12 344.185 219.845 288.24C289.57 232.295 384.138 200.865 482.744 200.865C581.35 200.865 675.918 232.295 745.643 288.24Z"
-         fill="currentColor"
-       ></path>
-     </svg>
-   </a>
- </html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>I Want Both</title>
+</head>
+<body>
+  <header>
+    <h1 class="fluid">I am<br />Diya Joshi.</h1>
+  </header>
+  <main>
+    <section class="content fluid">
+      <h2><span aria-hidden="true">I am a  &nbsp;   &nbsp;</span>
+        <span class="sr-only">you can ship things.</span>
+      </h2>
+      <ul aria-hidden="true" style="--count: 21">
+        <li style="--i: 0">coder.</li>
+        <li style="--i: 1">muscician.</li>
+        <li style="--i: 2">artist.</li>
+        <li style="--i: 3">solver.</li>
+        <li style="--i: 4">thinker.</li>
+        <li style="--i: 5">learner.</li>
+        <li style="--i: 6">cook.</li>
+        <li style="--i: 7">reader.</li>
+        <li style="--i: 8">writer.</li>
+        <li style="--i: 9">collaborater.</li>
+        <li style="--i: 10">creater.</li>
+        <li style="--i: 11">inspirer.</li>
+        <li style="--i: 12">leader.</li>
+        <li style="--i: 13">innovater.</li>
+        <li style="--i: 14">inquirer.</li>
+        <li style="--i: 15">philosopher.</li>
+        <li style="--i: 16">teacher.</li>
+        <li style="--i: 17">visualizer.</li>
+        <li style="--i: 18">edm enthusiast.</li>
+        <li style="--i: 19">comedian.</li>
+        <li style="--i: 20">gamer.</li>
+      </ul>
+    </section>
+    <section>
+      <h2 class="fluid">fin.</h2>
+    </section>
+  </main>
+  <footer>ʕ⊙ᴥ⊙ʔ jh3yy &copy; 2024</footer>
+  <a
+    class="bear-link"
+    href="https://twitter.com/intent/follow?screen_name=jh3yy"
+    target="_blank"
+    rel="noreferrer noopener"
+  >
+    <svg
+      class="w-9"
+      viewBox="0 0 969 955"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <circle
+        cx="161.191"
+        cy="320.191"
+        r="133.191"
+        stroke="currentColor"
+        stroke-width="20"
+      ></circle>
+      <circle
+        cx="806.809"
+        cy="320.191"
+        r="133.191"
+        stroke="currentColor"
+        stroke-width="20"
+      ></circle>
+      <circle
+        cx="695.019"
+        cy="587.733"
+        r="31.4016"
+        fill="currentColor"
+      ></circle>
+      <circle
+        cx="272.981"
+        cy="587.733"
+        r="31.4016"
+        fill="currentColor"
+      ></circle>
+      <path
+        d="M564.388 712.083C564.388 743.994 526.035 779.911 483.372 779.911C440.709 779.911 402.356 743.994 402.356 712.083C402.356 680.173 440.709 664.353 483.372 664.353C526.035 664.353 564.388 680.173 564.388 712.083Z"
+        fill="currentColor"
+      ></path>
+      <rect
+        x="310.42"
+        y="448.31"
+        width="343.468"
+        height="51.4986"
+        fill="#FF1E1E"
+      ></rect>
+      <path
+        fill-rule="evenodd"
+        clip-rule="evenodd"
+        d="M745.643 288.24C815.368 344.185 854.539 432.623 854.539 511.741H614.938V454.652C614.938 433.113 597.477 415.652 575.938 415.652H388.37C366.831 415.652 349.37 433.113 349.37 454.652V511.741L110.949 511.741C110.949 432.623 150.12 344.185 219.845 288.24C289.57 232.295 384.138 200.865 482.744 200.865C581.35 200.865 675.918 232.295 745.643 288.24Z"
+        fill="currentColor"
+      ></path>
+    </svg>
+  </a>
+  <script type="module" src="JavaScript/script.js"></script>
+</body>
+</html>
