--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
   </main>
 
-  <footer>ʕ⊙ᴥ⊙ʔ jh3yy &copy; 2024</footer>
+  <footer>ʕ⊙ᴥ⊙ʔ Diya Joshi &copy; 2025</footer>
 
   <script type="module" src="JavaScript/script.js"></script>
   <script type="module" src="JavaScript/hover_disclosures.js"></script>
